--- a/src/classes/Makefile-depend
+++ b/src/classes/Makefile-depend
@@ -32,6 +32,6 @@ $(OBJ)/act.thief.o : act.thief.cc \
 	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/spells.h $(INCLUDE)/screen.h $(INCLUDE)/vehicle.h $(INCLUDE)/materials.h $(INCLUDE)/flow_room.h $(INCLUDE)/house.h $(INCLUDE)/char_class.h $(INCLUDE)/fight.h $(INCLUDE)/constants.h $(INCLUDE)/events.h 
 	$(CXX) -c $(CXXFLAGS) act.thief.cc         -o $(OBJ)/act.thief.o
 $(OBJ)/char_class.o : char_class.cc \
-	$(INCLUDE)/structs.h $(INCLUDE)/db.h $(INCLUDE)/utils.h $(INCLUDE)/spells.h $(INCLUDE)/interpreter.h $(INCLUDE)/char_class.h $(INCLUDE)/comm.h $(INCLUDE)/vehicle.h $(INCLUDE)/handler.h 
+	$(INCLUDE)/structs.h $(INCLUDE)/db.h $(INCLUDE)/utils.h $(INCLUDE)/spells.h $(INCLUDE)/interpreter.h $(INCLUDE)/char_class.h $(INCLUDE)/comm.h $(INCLUDE)/vehicle.h $(INCLUDE)/handler.h $(INCLUDE)/security.h 
 	$(CXX) -c $(CXXFLAGS) char_class.cc        -o $(OBJ)/char_class.o
 OBJFILES= $(OBJ)/act.barb.o $(OBJ)/act.cyborg.o $(OBJ)/act.hood.o $(OBJ)/act.knight.o $(OBJ)/act.mage.o $(OBJ)/act.merc.o $(OBJ)/act.monk.o $(OBJ)/act.physic.o $(OBJ)/act.psionic.o $(OBJ)/act.ranger.o $(OBJ)/act.thief.o $(OBJ)/char_class.o
