calculate_thaco no longer returns negative thac0.  Fight debugging now shows thac0, die roll, and the victim's AC.  Special modes are now declared as an enum special_mode.  Functions that call specials without the enumerations now do.  do_give has been refactored, and no longer outputs '$n gives <NULL> to $N (x0)' when 'give all.widget' is given and there is no widget in inventory.

--- a/src/mobiles/Makefile-depend
+++ b/src/mobiles/Makefile-depend
@@ -1,5 +1,5 @@
 $(OBJ)/artisan.o : artisan.cc \
-	$(INCLUDE)/db.h $(INCLUDE)/structs.h $(INCLUDE)/xml_utils.h $(INCLUDE)/utils.h $(INCLUDE)/interpreter.h $(INCLUDE)/actions.h 
+	$(INCLUDE)/db.h $(INCLUDE)/structs.h $(INCLUDE)/xml_utils.h $(INCLUDE)/utils.h $(INCLUDE)/interpreter.h $(INCLUDE)/actions.h $(INCLUDE)/char_class.h $(INCLUDE)/comm.h 
 	$(CXX) -c $(CXXFLAGS) artisan.cc           -o $(OBJ)/artisan.o
 $(OBJ)/mail.o : mail.cc \
 	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/db.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/mail.h $(INCLUDE)/screen.h $(INCLUDE)/clan.h $(INCLUDE)/materials.h 
