Temporary string mechanism was written -- do_score, affs_to_str, do_affects, show_obj_to_char, slog, send_to_char, and perform_tell rewritten to take advantage of the new functionality.  Remorter now displays message on correct answer.  Receptionist and cyrogenicist only respond to commands. Unspecializer now accepts an abbreviation for 'buy unspecialization'.

--- a/src/util/Makefile-depend
+++ b/src/util/Makefile-depend
@@ -10,7 +10,10 @@ $(OBJ)/modify.o : modify.cc \
 $(OBJ)/random.o : random.cc \
 
 	$(CXX) -c $(CXXFLAGS) random.cc            -o $(OBJ)/random.o
+$(OBJ)/tmpstr.o : tmpstr.cc \
+	$(INCLUDE)/interpreter.h 
+	$(CXX) -c $(CXXFLAGS) tmpstr.cc            -o $(OBJ)/tmpstr.o
 $(OBJ)/utils.o : utils.cc \
-	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/screen.h $(INCLUDE)/spells.h $(INCLUDE)/handler.h $(INCLUDE)/interpreter.h $(INCLUDE)/security.h $(INCLUDE)/db.h $(INCLUDE)/char_class.h 
+	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/screen.h $(INCLUDE)/spells.h $(INCLUDE)/handler.h $(INCLUDE)/interpreter.h $(INCLUDE)/security.h $(INCLUDE)/db.h $(INCLUDE)/char_class.h $(INCLUDE)/tmpstr.h 
 	$(CXX) -c $(CXXFLAGS) utils.cc             -o $(OBJ)/utils.o
-OBJFILES= $(OBJ)/graph.o $(OBJ)/handler.o $(OBJ)/modify.o $(OBJ)/random.o $(OBJ)/utils.o
+OBJFILES= $(OBJ)/graph.o $(OBJ)/handler.o $(OBJ)/modify.o $(OBJ)/random.o $(OBJ)/tmpstr.o $(OBJ)/utils.o
