--- a/src/include/Makefile
+++ b/src/include/Makefile
@@ -1,8 +1,8 @@
 all default: structs.h
 
-structs.h: defs.h obj_data.h constants.h creature.h desc_data.h room_data.h search.h weather.h zone_data.h ban.h character_list.h
+structs.h: defs.h obj_data.h constants.h creature.h desc_data.h room_data.h search.h weather.h zone_data.h ban.h creature_list.h
 	touch structs.h
-character_list.h: safe_list.h
+creature_list.h: safe_list.h
 clean depend: FORCE
 
 FORCE:
