--- a/src/misc/Makefile-depend
+++ b/src/misc/Makefile-depend
@@ -5,7 +5,7 @@ $(OBJ)/act.informative.o : act.informative.cc \
 	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/spells.h $(INCLUDE)/screen.h $(INCLUDE)/vehicle.h $(INCLUDE)/materials.h $(INCLUDE)/clan.h $(INCLUDE)/smokes.h $(INCLUDE)/bomb.h $(INCLUDE)/fight.h $(INCLUDE)/specs.h $(INCLUDE)/events.h $(INCLUDE)/security.h $(INCLUDE)/char_class.h $(INCLUDE)/tmpstr.h 
 	$(CXX) -c $(CXXFLAGS) act.informative.cc   -o $(OBJ)/act.informative.o
 $(OBJ)/act.movement.o : act.movement.cc \
-	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/spells.h $(INCLUDE)/house.h $(INCLUDE)/vehicle.h $(INCLUDE)/materials.h $(INCLUDE)/fight.h $(INCLUDE)/security.h $(INCLUDE)/char_class.h 
+	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/spells.h $(INCLUDE)/house.h $(INCLUDE)/vehicle.h $(INCLUDE)/materials.h $(INCLUDE)/fight.h $(INCLUDE)/security.h $(INCLUDE)/char_class.h $(INCLUDE)/tmpstr.h 
 	$(CXX) -c $(CXXFLAGS) act.movement.cc      -o $(OBJ)/act.movement.o
 $(OBJ)/act.obj.o : act.obj.cc \
 	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/spells.h $(INCLUDE)/char_class.h $(INCLUDE)/vehicle.h $(INCLUDE)/materials.h $(INCLUDE)/smokes.h $(INCLUDE)/bomb.h $(INCLUDE)/guns.h $(INCLUDE)/fight.h $(INCLUDE)/security.h $(INCLUDE)/tmpstr.h 
