--- a/src/combat/Makefile-depend
+++ b/src/combat/Makefile-depend
@@ -1,9 +1,6 @@
 $(OBJ)/act.offensive.o : act.offensive.cc \
 	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/spells.h $(INCLUDE)/screen.h $(INCLUDE)/char_class.h $(INCLUDE)/vehicle.h $(INCLUDE)/materials.h $(INCLUDE)/fight.h $(INCLUDE)/guns.h $(INCLUDE)/bomb.h $(INCLUDE)/shop.h $(INCLUDE)/events.h 
 	$(CXX) -c $(CXXFLAGS) act.offensive.cc     -o $(OBJ)/act.offensive.o
-$(OBJ)/combat_arena.o : combat_arena.cc \
-	$(INCLUDE)/structs.h $(INCLUDE)/creature_list.h $(INCLUDE)/comm.h $(INCLUDE)/utils.h $(INCLUDE)/interpreter.h $(INCLUDE)/db.h $(INCLUDE)/spells.h $(INCLUDE)/combat.h $(INCLUDE)/handler.h $(INCLUDE)/screen.h $(INCLUDE)/bomb.h $(INCLUDE)/house.h 
-	$(CXX) -c $(CXXFLAGS) combat_arena.cc      -o $(OBJ)/combat_arena.o
 $(OBJ)/combat_messages.o : combat_messages.cc \
 	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/handler.h $(INCLUDE)/interpreter.h $(INCLUDE)/db.h $(INCLUDE)/spells.h $(INCLUDE)/screen.h $(INCLUDE)/char_class.h $(INCLUDE)/vehicle.h $(INCLUDE)/materials.h $(INCLUDE)/flow_room.h $(INCLUDE)/fight.h $(INCLUDE)/bomb.h $(INCLUDE)/shop.h $(INCLUDE)/guns.h $(INCLUDE)/specs.h 
 	$(CXX) -c $(CXXFLAGS) combat_messages.cc   -o $(OBJ)/combat_messages.o
@@ -13,4 +10,4 @@ $(OBJ)/combat_utils.o : combat_utils.cc \
 $(OBJ)/fight.o : fight.cc \
 	$(INCLUDE)/structs.h $(INCLUDE)/creature_list.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/handler.h $(INCLUDE)/interpreter.h $(INCLUDE)/db.h $(INCLUDE)/spells.h $(INCLUDE)/screen.h $(INCLUDE)/char_class.h $(INCLUDE)/vehicle.h $(INCLUDE)/materials.h $(INCLUDE)/flow_room.h $(INCLUDE)/fight.h $(INCLUDE)/bomb.h $(INCLUDE)/shop.h $(INCLUDE)/guns.h $(INCLUDE)/specs.h $(INCLUDE)/mobact.h $(INCLUDE)/combat.h $(INCLUDE)/events.h $(INCLUDE)/security.h $(INCLUDE)/quest.h 
 	$(CXX) -c $(CXXFLAGS) fight.cc             -o $(OBJ)/fight.o
-OBJFILES= $(OBJ)/act.offensive.o $(OBJ)/combat_arena.o $(OBJ)/combat_messages.o $(OBJ)/combat_utils.o $(OBJ)/fight.o
+OBJFILES= $(OBJ)/act.offensive.o $(OBJ)/combat_messages.o $(OBJ)/combat_utils.o $(OBJ)/fight.o
