immort where now takes parameters -nomob -noobject -house and -nohouse

--- a/src/Makefile
+++ b/src/Makefile
@@ -9,7 +9,7 @@ SUBDIRS= \
 	misc mobiles net objects olc quest search \
 	social specials util weather structs map
 
-MAKEFLAGS=-s -k 4 -j 4
+MAKEFLAGS=-s -k 4
 OBJ=ObjFiles
 LIBS=-lcrypt -lxml2 
 EXE=../bin/circle
