--- a/src/olc/Makefile-depend
+++ b/src/olc/Makefile-depend
@@ -20,7 +20,7 @@ $(OBJ)/olc_ticl.o : olc_ticl.cc \
 	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/security.h $(INCLUDE)/olc.h $(INCLUDE)/screen.h $(INCLUDE)/flow_room.h $(INCLUDE)/specs.h 
 	$(CXX) -c $(CXXFLAGS) olc_ticl.cc          -o $(OBJ)/olc_ticl.o
 $(OBJ)/olc_wld.o : olc_wld.cc \
-	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/security.h $(INCLUDE)/olc.h $(INCLUDE)/screen.h $(INCLUDE)/flow_room.h $(INCLUDE)/clan.h $(INCLUDE)/specs.h $(INCLUDE)/house.h 
+	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/security.h $(INCLUDE)/olc.h $(INCLUDE)/screen.h $(INCLUDE)/flow_room.h $(INCLUDE)/clan.h $(INCLUDE)/specs.h $(INCLUDE)/house.h $(INCLUDE)/tmpstr.h 
 	$(CXX) -c $(CXXFLAGS) olc_wld.cc           -o $(OBJ)/olc_wld.o
 $(OBJ)/olc_zon.o : olc_zon.cc \
 	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/security.h $(INCLUDE)/olc.h $(INCLUDE)/screen.h $(INCLUDE)/flow_room.h $(INCLUDE)/paths.h 
