SNIPE flag completely removed.  New, but incomplete 'vendor' special added. Psychic surge will now not work more than twice in a row on the same mob within 2 mud-hours.  Miscellaneous cleanups and fixes.

--- a/src/mobiles/Makefile-depend
+++ b/src/mobiles/Makefile-depend
@@ -10,4 +10,7 @@ $(OBJ)/mobact.o : mobact.cc \
 $(OBJ)/shop.o : shop.cc \
 	$(INCLUDE)/structs.h $(INCLUDE)/comm.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/interpreter.h $(INCLUDE)/spells.h $(INCLUDE)/utils.h $(INCLUDE)/shop.h $(INCLUDE)/screen.h $(INCLUDE)/fight.h 
 	$(CXX) -c $(CXXFLAGS) shop.cc              -o $(OBJ)/shop.o
-OBJFILES= $(OBJ)/artisan.o $(OBJ)/mail.o $(OBJ)/mobact.o $(OBJ)/shop.o
+$(OBJ)/vendor.o : vendor.cc \
+	$(INCLUDE)/actions.h $(INCLUDE)/comm.h $(INCLUDE)/handler.h $(INCLUDE)/interpreter.h $(INCLUDE)/tmpstr.h $(INCLUDE)/utils.h 
+	$(CXX) -c $(CXXFLAGS) vendor.cc            -o $(OBJ)/vendor.o
+OBJFILES= $(OBJ)/artisan.o $(OBJ)/mail.o $(OBJ)/mobact.o $(OBJ)/shop.o $(OBJ)/vendor.o
