CLEANUP: ifndef/define protection for includes are standardized CLEANUP: guard special moved to mobiles/ to reflect its generic use CLEANUP: guard special no longer supports 'dir' directive CORRECTED: typo in magic_book special

--- a/src/mobiles/Makefile-depend
+++ b/src/mobiles/Makefile-depend
@@ -1,8 +1,11 @@
 $(OBJ)/artisan.o : artisan.cc \
 	$(INCLUDE)/db.h $(INCLUDE)/structs.h $(INCLUDE)/xml_utils.h $(INCLUDE)/utils.h $(INCLUDE)/interpreter.h $(INCLUDE)/actions.h $(INCLUDE)/char_class.h $(INCLUDE)/comm.h $(INCLUDE)/tmpstr.h $(INCLUDE)/screen.h $(INCLUDE)/handler.h $(INCLUDE)/shop.h $(INCLUDE)/security.h 
 	$(CXX) -c $(CXXFLAGS) artisan.cc           -o $(OBJ)/artisan.o
+$(OBJ)/guard.o : guard.cc \
+	$(INCLUDE)/actions.h $(INCLUDE)/db.h $(INCLUDE)/comm.h $(INCLUDE)/fight.h $(INCLUDE)/handler.h $(INCLUDE)/interpreter.h $(INCLUDE)/tmpstr.h $(INCLUDE)/screen.h $(INCLUDE)/utils.h 
+	$(CXX) -c $(CXXFLAGS) guard.cc             -o $(OBJ)/guard.o
 $(OBJ)/mail.o : mail.cc \
-	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/db.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/mail.h $(INCLUDE)/screen.h $(INCLUDE)/clan.h $(INCLUDE)/materials.h 
+	$(INCLUDE)/actions.h $(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/db.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/mail.h $(INCLUDE)/screen.h $(INCLUDE)/clan.h $(INCLUDE)/materials.h 
 	$(CXX) -c $(CXXFLAGS) mail.cc              -o $(OBJ)/mail.o
 $(OBJ)/mobact.o : mobact.cc \
 	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/db.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/spells.h $(INCLUDE)/char_class.h $(INCLUDE)/vehicle.h $(INCLUDE)/flow_room.h $(INCLUDE)/guns.h $(INCLUDE)/bomb.h $(INCLUDE)/mobact.h $(INCLUDE)/fight.h $(INCLUDE)/actions.h $(INCLUDE)/creature.h 
@@ -11,6 +14,6 @@ $(OBJ)/shop.o : shop.cc \
 	$(INCLUDE)/structs.h $(INCLUDE)/comm.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/interpreter.h $(INCLUDE)/spells.h $(INCLUDE)/utils.h $(INCLUDE)/shop.h $(INCLUDE)/screen.h $(INCLUDE)/fight.h 
 	$(CXX) -c $(CXXFLAGS) shop.cc              -o $(OBJ)/shop.o
 $(OBJ)/vendor.o : vendor.cc \
-	$(INCLUDE)/actions.h $(INCLUDE)/comm.h $(INCLUDE)/handler.h $(INCLUDE)/interpreter.h $(INCLUDE)/tmpstr.h $(INCLUDE)/utils.h 
+	$(INCLUDE)/actions.h $(INCLUDE)/db.h $(INCLUDE)/comm.h $(INCLUDE)/handler.h $(INCLUDE)/interpreter.h $(INCLUDE)/tmpstr.h $(INCLUDE)/screen.h $(INCLUDE)/utils.h 
 	$(CXX) -c $(CXXFLAGS) vendor.cc            -o $(OBJ)/vendor.o
-OBJFILES= $(OBJ)/artisan.o $(OBJ)/mail.o $(OBJ)/mobact.o $(OBJ)/shop.o $(OBJ)/vendor.o
+OBJFILES= $(OBJ)/artisan.o $(OBJ)/guard.o $(OBJ)/mail.o $(OBJ)/mobact.o $(OBJ)/shop.o $(OBJ)/vendor.o
