--- a/src/mobiles/Makefile-depend
+++ b/src/mobiles/Makefile-depend
@@ -8,7 +8,7 @@ $(OBJ)/mail.o : mail.cc \
 	$(INCLUDE)/actions.h $(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/db.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/mail.h $(INCLUDE)/screen.h $(INCLUDE)/clan.h $(INCLUDE)/materials.h 
 	$(CXX) -c $(CXXFLAGS) mail.cc              -o $(OBJ)/mail.o
 $(OBJ)/mobact.o : mobact.cc \
-	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/db.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/spells.h $(INCLUDE)/char_class.h $(INCLUDE)/vehicle.h $(INCLUDE)/flow_room.h $(INCLUDE)/guns.h $(INCLUDE)/bomb.h $(INCLUDE)/mobact.h $(INCLUDE)/fight.h $(INCLUDE)/actions.h $(INCLUDE)/creature.h 
+	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/db.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/spells.h $(INCLUDE)/char_class.h $(INCLUDE)/vehicle.h $(INCLUDE)/flow_room.h $(INCLUDE)/guns.h $(INCLUDE)/bomb.h $(INCLUDE)/mobact.h $(INCLUDE)/fight.h $(INCLUDE)/actions.h $(INCLUDE)/creature.h $(INCLUDE)/screen.h 
 	$(CXX) -c $(CXXFLAGS) mobact.cc            -o $(OBJ)/mobact.o
 $(OBJ)/shop.o : shop.cc \
 	$(INCLUDE)/structs.h $(INCLUDE)/comm.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/interpreter.h $(INCLUDE)/spells.h $(INCLUDE)/utils.h $(INCLUDE)/shop.h $(INCLUDE)/screen.h $(INCLUDE)/fight.h 
