--- a/src/quest/Makefile-depend
+++ b/src/quest/Makefile-depend
@@ -1,4 +1,4 @@
 $(OBJ)/quest.o : quest.cc \
-	$(INCLUDE)/xml_utils.h $(INCLUDE)/structs.h $(INCLUDE)/comm.h $(INCLUDE)/utils.h $(INCLUDE)/interpreter.h $(INCLUDE)/db.h $(INCLUDE)/spells.h $(INCLUDE)/quest.h $(INCLUDE)/handler.h $(INCLUDE)/screen.h $(INCLUDE)/tmpstr.h $(INCLUDE)/utils.h 
+	$(INCLUDE)/xml_utils.h $(INCLUDE)/structs.h $(INCLUDE)/comm.h $(INCLUDE)/utils.h $(INCLUDE)/interpreter.h $(INCLUDE)/db.h $(INCLUDE)/spells.h $(INCLUDE)/quest.h $(INCLUDE)/handler.h $(INCLUDE)/screen.h $(INCLUDE)/tmpstr.h $(INCLUDE)/utils.h $(INCLUDE)/security.h 
 	$(CXX) -c $(CXXFLAGS) quest.cc             -o $(OBJ)/quest.o
 OBJFILES= $(OBJ)/quest.o
