--- a/src/help/Makefile-depend
+++ b/src/help/Makefile-depend
@@ -1,10 +1,7 @@
 $(OBJ)/help_collection.o : help_collection.cc \
 	$(INCLUDE)/structs.h $(INCLUDE)/creature.h $(INCLUDE)/utils.h $(INCLUDE)/help.h $(INCLUDE)/interpreter.h $(INCLUDE)/db.h $(INCLUDE)/comm.h $(INCLUDE)/screen.h $(INCLUDE)/handler.h $(INCLUDE)/tmpstr.h 
 	$(CXX) -c $(CXXFLAGS) help_collection.cc   -o $(OBJ)/help_collection.o
-$(OBJ)/help_group.o : help_group.cc \
-	$(INCLUDE)/structs.h $(INCLUDE)/creature.h $(INCLUDE)/utils.h $(INCLUDE)/help.h $(INCLUDE)/interpreter.h $(INCLUDE)/db.h $(INCLUDE)/comm.h $(INCLUDE)/screen.h $(INCLUDE)/handler.h $(INCLUDE)/player_table.h 
-	$(CXX) -c $(CXXFLAGS) help_group.cc        -o $(OBJ)/help_group.o
 $(OBJ)/help_item.o : help_item.cc \
 	$(INCLUDE)/structs.h $(INCLUDE)/creature.h $(INCLUDE)/utils.h $(INCLUDE)/help.h $(INCLUDE)/interpreter.h $(INCLUDE)/db.h $(INCLUDE)/comm.h $(INCLUDE)/screen.h $(INCLUDE)/handler.h 
 	$(CXX) -c $(CXXFLAGS) help_item.cc         -o $(OBJ)/help_item.o
-OBJFILES= $(OBJ)/help_collection.o $(OBJ)/help_group.o $(OBJ)/help_item.o
+OBJFILES= $(OBJ)/help_collection.o $(OBJ)/help_item.o
