Dependencies updated.  Keep in mind that you'll still have to rm ObjFiles/*.o for Tempus to build properly.  It is not currently known why.

--- a/src/db/Makefile-depend
+++ b/src/db/Makefile-depend
@@ -1,5 +1,5 @@
 $(OBJ)/account.o : account.cc \
-	$(INCLUDE)/xml_utils.h $(INCLUDE)/utils.h $(INCLUDE)/desc_data.h $(INCLUDE)/interpreter.h $(INCLUDE)/player_table.h $(INCLUDE)/tmpstr.h $(INCLUDE)/account.h $(INCLUDE)/comm.h 
+	$(INCLUDE)/xml_utils.h $(INCLUDE)/utils.h $(INCLUDE)/desc_data.h $(INCLUDE)/interpreter.h $(INCLUDE)/player_table.h $(INCLUDE)/tmpstr.h $(INCLUDE)/account.h $(INCLUDE)/comm.h $(INCLUDE)/security.h 
 	$(CXX) -c $(CXXFLAGS) account.cc           -o $(OBJ)/account.o
 $(OBJ)/analysis.o : analysis.cc \
 	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/screen.h $(INCLUDE)/tokenizer.h $(INCLUDE)/obj_matcher.h $(INCLUDE)/tmpstr.h 
