--- a/src/help/Makefile-depend
+++ b/src/help/Makefile-depend
@@ -1,5 +1,5 @@
 $(OBJ)/help_collection.o : help_collection.cc \
-	$(INCLUDE)/structs.h $(INCLUDE)/creature.h $(INCLUDE)/utils.h $(INCLUDE)/help.h $(INCLUDE)/interpreter.h $(INCLUDE)/db.h $(INCLUDE)/comm.h $(INCLUDE)/screen.h $(INCLUDE)/handler.h $(INCLUDE)/tmpstr.h 
+	$(INCLUDE)/structs.h $(INCLUDE)/creature.h $(INCLUDE)/utils.h $(INCLUDE)/help.h $(INCLUDE)/interpreter.h $(INCLUDE)/db.h $(INCLUDE)/comm.h $(INCLUDE)/screen.h $(INCLUDE)/handler.h $(INCLUDE)/tmpstr.h $(INCLUDE)/security.h 
 	$(CXX) -c $(CXXFLAGS) help_collection.cc   -o $(OBJ)/help_collection.o
 $(OBJ)/help_item.o : help_item.cc \
 	$(INCLUDE)/structs.h $(INCLUDE)/creature.h $(INCLUDE)/utils.h $(INCLUDE)/help.h $(INCLUDE)/interpreter.h $(INCLUDE)/db.h $(INCLUDE)/comm.h $(INCLUDE)/screen.h $(INCLUDE)/handler.h 
