--- a/src/specials/Makefile-depend
+++ b/src/specials/Makefile-depend
@@ -1,5 +1,5 @@
 $(OBJ)/demonic_guard.o : demonic_guard.cc \
-	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/spells.h $(INCLUDE)/char_class.h $(INCLUDE)/screen.h $(INCLUDE)/clan.h $(INCLUDE)/vehicle.h $(INCLUDE)/materials.h $(INCLUDE)/paths.h $(INCLUDE)/specs.h $(INCLUDE)/login.h $(INCLUDE)/matrix.h $(INCLUDE)/elevators.h $(INCLUDE)/house.h $(INCLUDE)/fight.h 
+	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/spells.h $(INCLUDE)/char_class.h $(INCLUDE)/screen.h $(INCLUDE)/clan.h $(INCLUDE)/desc_data.h $(INCLUDE)/materials.h $(INCLUDE)/paths.h $(INCLUDE)/specs.h $(INCLUDE)/login.h $(INCLUDE)/elevators.h $(INCLUDE)/house.h $(INCLUDE)/fight.h 
 	$(CXX) -c $(CXXFLAGS) demonic_guard.cc     -o $(OBJ)/demonic_guard.o
 $(OBJ)/duke.o : duke.cc \
 	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/spells.h $(INCLUDE)/fight.h 
