--- a/src/weather/Makefile-depend
+++ b/src/weather/Makefile-depend
@@ -1,4 +1,4 @@
 $(OBJ)/weather.o : weather.cc \
-	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/handler.h $(INCLUDE)/interpreter.h $(INCLUDE)/db.h 
+	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/comm.h $(INCLUDE)/handler.h $(INCLUDE)/interpreter.h $(INCLUDE)/db.h $(INCLUDE)/quest.h 
 	$(CXX) -c $(CXXFLAGS) weather.cc           -o $(OBJ)/weather.o
 OBJFILES= $(OBJ)/weather.o
