--- a/src/mobiles/Makefile-depend
+++ b/src/mobiles/Makefile-depend
@@ -11,9 +11,9 @@ $(OBJ)/mobact.o : mobact.cc \
 	$(INCLUDE)/structs.h $(INCLUDE)/utils.h $(INCLUDE)/db.h $(INCLUDE)/comm.h $(INCLUDE)/interpreter.h $(INCLUDE)/handler.h $(INCLUDE)/spells.h $(INCLUDE)/char_class.h $(INCLUDE)/vehicle.h $(INCLUDE)/flow_room.h $(INCLUDE)/guns.h $(INCLUDE)/bomb.h $(INCLUDE)/mobact.h $(INCLUDE)/fight.h $(INCLUDE)/actions.h $(INCLUDE)/creature.h $(INCLUDE)/screen.h $(INCLUDE)/tmpstr.h 
 	$(CXX) -c $(CXXFLAGS) mobact.cc            -o $(OBJ)/mobact.o
 $(OBJ)/shop.o : shop.cc \
-	$(INCLUDE)/structs.h $(INCLUDE)/comm.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/interpreter.h $(INCLUDE)/spells.h $(INCLUDE)/utils.h $(INCLUDE)/shop.h $(INCLUDE)/screen.h $(INCLUDE)/fight.h 
+	$(INCLUDE)/structs.h $(INCLUDE)/comm.h $(INCLUDE)/handler.h $(INCLUDE)/db.h $(INCLUDE)/interpreter.h $(INCLUDE)/spells.h $(INCLUDE)/utils.h $(INCLUDE)/shop.h $(INCLUDE)/screen.h $(INCLUDE)/fight.h $(INCLUDE)/vendor.h 
 	$(CXX) -c $(CXXFLAGS) shop.cc              -o $(OBJ)/shop.o
 $(OBJ)/vendor.o : vendor.cc \
-	$(INCLUDE)/actions.h $(INCLUDE)/db.h $(INCLUDE)/comm.h $(INCLUDE)/handler.h $(INCLUDE)/interpreter.h $(INCLUDE)/tmpstr.h $(INCLUDE)/screen.h $(INCLUDE)/utils.h 
+	$(INCLUDE)/actions.h $(INCLUDE)/db.h $(INCLUDE)/comm.h $(INCLUDE)/handler.h $(INCLUDE)/interpreter.h $(INCLUDE)/tmpstr.h $(INCLUDE)/screen.h $(INCLUDE)/weather.h $(INCLUDE)/utils.h $(INCLUDE)/vendor.h 
 	$(CXX) -c $(CXXFLAGS) vendor.cc            -o $(OBJ)/vendor.o
 OBJFILES= $(OBJ)/artisan.o $(OBJ)/guard.o $(OBJ)/mail.o $(OBJ)/mobact.o $(OBJ)/shop.o $(OBJ)/vendor.o
